# barbearia_2_0

./: .gitignore  Script-2.sql  Script_barbearia.sql  api_tests.txt  docker-compose.yml  package.json  requisicoes
barbearia_backend/: Cargo.toml  Dockerfile
barbearia_backend/src/: db.rs  main.rs  response.rs
barbearia_backend/src/handlers/: auth_handler.rs  health_handler.rs  item_handler.rs  mod.rs  user_handler.rs
barbearia_backend/src/middleware/: auth_middleware.rs  mod.rs  upload_middleware.rs
barbearia_backend/src/models/: auth.rs  item.rs  mod.rs  user.rs
barbearia_backend/src/routes/: auth_routes.rs  health_routes.rs  item_routes.rs  mod.rs  user_routes.rs
barbearia_frontend/: Dockerfile  index.html  package.json
barbearia_frontend/src/: index.css  index.html  main.tsx
barbearia_frontend/src/api/: client.ts
barbearia_frontend/src/components/layout/: Footer.module.css  Footer.tsx  HomeButtons.module.css  HomeButtons.tsx  ItemCard.module.css  ItemCard.tsx  LoginPanel.module.css  LoginPanel.tsx  NavBar.module.css  NavBar.tsx  TopBar.module.css  TopBar.tsx
barbearia_frontend/src/components/popups/: AuthToast.module.css  AuthToast.tsx  CreateItemModal.module.css  CreateItemModal.tsx  ImageCropper.module.css  ImageCropper.tsx  RoutePogress.tsx  cropImage.ts
barbearia_frontend/src/pages/: ContactPage.module.css  ContactPage.tsx  Home.module.css  Home.tsx  ItemsPage.module.css  ItemsPage.tsx
barbearia_frontend/src/store/: authStore.ts  navigationStore.ts  sliceStore.ts
db/: init.sql
nginx/: nginx.conf
(+3 files in other folders)
