[package]
name = "barbearia_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

# Serialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data/Tempo
chrono = { version = "0.4", features = ["serde"] }

# Passwords
bcrypt = "0.16"

# Environment
dotenv = "0.15"